[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's CSS parser"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_css_parser"
repository.workspace = true
version              = "0.5.7"

[dependencies]
biome_console       = { workspace = true }
biome_css_factory   = { workspace = true }
biome_css_syntax    = { workspace = true }
biome_diagnostics   = { workspace = true }
biome_parser        = { workspace = true }
biome_rowan         = { workspace = true }
biome_unicode_table = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
biome_configuration = { path = "../biome_configuration" }
biome_deserialize   = { path = "../biome_deserialize" }
biome_fs            = { path = "../biome_fs" }
biome_service       = { path = "../biome_service" }
biome_test_utils    = { path = "../biome_test_utils" }
camino              = { workspace = true }
insta               = { workspace = true }
quickcheck          = { workspace = true }
quickcheck_macros   = { workspace = true }
tests_macros        = { path = "../tests_macros" }

[lints]
workspace = true
