[package]
name                 = "biome_css_parser"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's CSS parser"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

[[bench]]
harness = false
name    = "css_parser"

[dependencies]
biome_console       = { workspace = true }
biome_css_factory   = { workspace = true }
biome_css_syntax    = { workspace = true }
biome_diagnostics   = { workspace = true }
biome_parser        = { workspace = true }
biome_rowan         = { workspace = true }
biome_unicode_table = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
biome_configuration = { path = "../biome_configuration" }
biome_deserialize   = { path = "../biome_deserialize" }
biome_fs            = { path = "../biome_fs" }
biome_service       = { path = "../biome_service" }
biome_test_utils    = { path = "../biome_test_utils" }
camino              = { workspace = true }
criterion           = { package = "codspeed-criterion-compat", version = "*" }
insta               = { workspace = true }
quickcheck          = { workspace = true }
quickcheck_macros   = { workspace = true }
tests_macros        = { path = "../tests_macros" }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[lints]
workspace = true
