[package]
name                 = "biome_css_semantic"
version              = "0.0.0"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's semantic model for CSS"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

[dependencies]
biome_css_syntax = { workspace = true }
biome_formatter  = { workspace = true }
biome_rowan      = { workspace = true }
rustc-hash       = { workspace = true }

[dev-dependencies]
biome_css_parser = { path = "../biome_css_parser" }

[lints]
workspace = true
