[package]
name                 = "biome_css_syntax"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "SyntaxKind and common rowan definitions for biome_css_parser"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_rowan       = { workspace = true, features = ["serde"] }
biome_string_case = { workspace = true }
camino            = { workspace = true }
schemars          = { workspace = true, optional = true }
serde             = { workspace = true, features = ["derive"] }

[dev-dependencies]
biome_css_factory = { path = "../biome_css_factory" }
biome_css_parser  = { path = "../biome_css_parser" }

[features]
schema = ["biome_rowan/serde", "schemars"]
# Remove once SCSS parsing is fully ready
scss   = []

[lints]
workspace = true
