[package]
authors.workspace    = true
categories.workspace = true
description          = "Utilities to deserialize values"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_deserialize"
repository.workspace = true
version              = "0.6.0"

[dependencies]
biome_console     = { workspace = true }
biome_diagnostics = { workspace = true }
biome_json_parser = { workspace = true }
biome_json_syntax = { workspace = true }
biome_rowan       = { workspace = true }
camino            = { workspace = true, optional = true }
enumflags2        = { workspace = true }
indexmap          = { workspace = true, optional = true }
serde             = { workspace = true, optional = true }
serde_json        = { workspace = true, optional = true }
smallvec          = { workspace = true, optional = true }

[dev-dependencies]
biome_deserialize_macros = { workspace = true }

[features]
camino   = ["dep:camino"]
indexmap = ["dep:indexmap"]
serde    = ["dep:serde", "dep:serde_json"]
smallvec = ["dep:smallvec"]

[package.metadata.cargo-udeps.ignore]
development = ["biome_deserialize_macros"]

[lints]
workspace = true
