[package]
name                 = "biome_deserialize"
version              = "0.6.0"
authors.workspace    = true
edition.workspace    = true
description          = "Utilities to deserialize values"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

[package.metadata.cargo-udeps.ignore]
development = ["biome_deserialize_macros"]

[dependencies]
biome_console     = { workspace = true }
biome_diagnostics = { workspace = true }
biome_json_parser = { workspace = true }
biome_json_syntax = { workspace = true }
biome_rowan       = { workspace = true }
camino            = { workspace = true, optional = true }
enumflags2        = { workspace = true }
indexmap          = { workspace = true, optional = true }
serde             = { workspace = true, optional = true }
serde_json        = { workspace = true, optional = true }
smallvec          = { workspace = true, optional = true }

[dev-dependencies]
biome_deserialize_macros = { workspace = true }

[features]
camino   = ["dep:camino"]
indexmap = ["dep:indexmap"]
serde    = ["dep:serde", "dep:serde_json"]
smallvec = ["dep:smallvec"]

[lints]
workspace = true
