[package]
authors.workspace    = true
categories.workspace = true
description          = "Macros to help implement deserializable types in Biome"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_deserialize_macros"
repository.workspace = true
version              = "0.6.0"

[lib]
proc-macro = true

[dependencies]
biome_string_case = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2       = { workspace = true }
quote             = "1.0.14"
syn               = { workspace = true, features = ["extra-traits"] }

[lints]
workspace = true
