[package]
name                 = "biome_deserialize_macros"
version              = "0.6.0"
authors.workspace    = true
edition.workspace    = true
description          = "Macros to help implement deserializable types in Biome"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

[lib]
proc-macro = true

[dependencies]
biome_string_case = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2       = { workspace = true }
quote             = { workspace = true }
syn               = { workspace = true, features = ["extra-traits"] }

[lints]
workspace = true
