[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's shared infrastructure to implement reporting pretty error and diagnostics"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_diagnostics"
repository.workspace = true
version              = "0.5.7"

[[example]]
name = "cli"
test = true

[[example]]
name = "fs"
test = true

[[example]]
name = "lint"
test = true

[[example]]
name = "serde"
test = true

[dependencies]
backtrace                    = "0.3.74"
biome_console                = { workspace = true, features = ["serde"] }
biome_diagnostics_categories = { workspace = true, features = ["serde"] }
biome_diagnostics_macros     = { workspace = true }
biome_rowan                  = { workspace = true }
biome_text_edit              = { workspace = true, features = ["serde"] }
biome_text_size              = { workspace = true, features = ["serde"] }
bpaf                         = { workspace = true, optional = true }
camino                       = { workspace = true, optional = true }
enumflags2                   = { workspace = true, features = ["serde"] }
oxc_resolver                 = { workspace = true, optional = true }
schemars                     = { workspace = true, optional = true }
serde                        = { workspace = true, features = ["derive"] }
serde_ini                    = { workspace = true, optional = true }
serde_json                   = { workspace = true }
termcolor                    = { workspace = true }
terminal_size                = { workspace = true }
unicode-width                = { workspace = true }

[features]
bpaf         = ["dep:bpaf"]
camino       = ["dep:camino"]
oxc_resolver = ["dep:oxc_resolver"]
schema       = ["dep:schemars", "biome_text_edit/schema", "biome_diagnostics_categories/schema", "biome_console/schema"]
serde_ini    = ["dep:serde_ini"]
std          = []

[dev-dependencies]
insta      = { workspace = true }
serde_json = { workspace = true }
trybuild   = "1.0.103"

[lints]
workspace = true
