[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's shared infrastructure to implement reporting pretty error and diagnostics"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_diagnostics"
repository.workspace = true
version              = "0.5.7"

[[example]]
name = "cli"
test = true

[[example]]
name = "fs"
test = true

[[example]]
name = "lint"
test = true

[[example]]
name = "serde"
test = true

[dependencies]
backtrace                    = "0.3.75"
biome_console                = { workspace = true, features = ["serde"] }
biome_diagnostics_categories = { workspace = true, features = ["serde"] }
biome_diagnostics_macros     = { workspace = true }
biome_rowan                  = { workspace = true }
biome_text_edit              = { workspace = true, features = ["serde"] }
biome_text_size              = { workspace = true, features = ["serde"] }
bpaf                         = { workspace = true, optional = true }
camino                       = { workspace = true, optional = true }
enumflags2                   = { workspace = true, features = ["serde"] }
schemars                     = { workspace = true, optional = true }
serde                        = { workspace = true, features = ["derive"] }
serde_json                   = { workspace = true }
termcolor                    = { workspace = true }
terminal_size                = { workspace = true }
unicode-width                = { workspace = true }

[features]
bpaf   = ["dep:bpaf"]
camino = ["dep:camino"]
schema = ["dep:schemars", "biome_text_edit/schema", "biome_diagnostics_categories/schema", "biome_console/schema"]
std    = []

[dev-dependencies]
insta      = { workspace = true }
serde_json = { workspace = true }
trybuild   = "=1.0.110"

[lints]
workspace = true
