[package]
name                 = "biome_diagnostics"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's shared infrastructure to implement reporting pretty error and diagnostics"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

[[example]]
name = "cli"
test = true

[[example]]
name = "fs"
test = true

[[example]]
name = "lint"
test = true

[[example]]
name = "serde"
test = true

[dependencies]
backtrace                    = "0.3.76"
biome_console                = { workspace = true, features = ["serde"] }
biome_diagnostics_categories = { workspace = true, features = ["serde"] }
biome_diagnostics_macros     = { workspace = true }
biome_rowan                  = { workspace = true }
biome_text_edit              = { workspace = true, features = ["serde"] }
biome_text_size              = { workspace = true, features = ["serde"] }
bpaf                         = { workspace = true, optional = true }
camino                       = { workspace = true, optional = true }
enumflags2                   = { workspace = true, features = ["serde"] }
schemars                     = { workspace = true, optional = true }
serde                        = { workspace = true, features = ["derive"] }
serde_json                   = { workspace = true }
termcolor                    = { workspace = true }
terminal_size                = { workspace = true }
unicode-width                = { workspace = true }

[dev-dependencies]
insta      = { workspace = true }
serde_json = { workspace = true }
trybuild   = "=1.0.114"

[features]
bpaf   = ["dep:bpaf"]
camino = ["dep:camino"]
schema = ["biome_console/schema", "biome_diagnostics_categories/schema", "biome_text_edit/schema", "dep:schemars"]
std    = []

[lints]
workspace = true
