[package]
name                 = "biome_diagnostics_categories"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "Diagnostic categories for biome_diagnostics"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

[dependencies]
schemars   = { workspace = true, optional = true }
serde      = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
quote = "1.0.14"

[features]
schema = ["dep:schemars", "dep:serde_json", "serde"]
serde  = ["dep:serde"]

[lints]
workspace = true
