[package]
authors.workspace    = true
categories.workspace = true
description          = "Macros to implement Biome's diagnostics"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_diagnostics_macros"
repository.workspace = true
version              = "0.5.7"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = { workspace = true }
proc-macro2       = { workspace = true }
quote             = { workspace = true }
syn               = { workspace = true }

[lints]
workspace = true
