[package]
name                 = "biome_diagnostics_macros"
version              = "0.5.7"
authors.workspace    = true
edition.workspace    = true
description          = "Macros to implement Biome's diagnostics"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = { workspace = true }
proc-macro2       = { workspace = true }
quote             = { workspace = true }
syn               = { workspace = true }

[lints]
workspace = true
