[package]
name                 = "biome_flags"
version              = "0.0.0"
authors.workspace    = true
edition.workspace    = true
description          = "Utilities to implement simple feature flags"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_console = { workspace = true }

[lints]
workspace = true
